# arrival

./: .gitignore  CHANGELOG.md  CLAUDE.md  PHASE2_PLAN.md  PHASE3_PLAN.md  README.md  SPEC.md  pyproject.toml  test_core.py  test_crystal_cluster.py  test_phase2_deform.py  test_phase2_delete_points.py  test_phase2_fields.py  test_phase2_instance.py  test_render.py
.github/workflows/: test.yml
arrival/: __init__.py  blender.py  materials.py  nodes.py  scene.py  sockets.py
examples/: usd_export.py
examples/recipes/: __init__.py  crystal_cluster.py  rocky_cluster.py
tests/: __init__.py  test_describe.py  test_scene_serialization.py  test_show.py  test_smoke.py  test_usd_export.py
